Page layout and button / input adjustments

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -15,8 +15,8 @@ button, .button {
 	@local_alternative_colour_light: @feature_colour_light;
 	@local_alternative_colour_dark: @feature_colour_dark;
 
-	@local_negative_colour: @primary_colour;
-	@local_negative_colour_light: @primary_colour_light;
+	@local_negative_colour: @primary_colour_dark;
+	@local_negative_colour_light: @primary_colour;
 	@local_negative_colour_dark: @primary_colour_dark;
 
 
