--- a/src/styles/lists.less
+++ b/src/styles/lists.less
@@ -141,6 +141,30 @@
 	}
 	.list-item-click-keyframes(list_item_color_change_default, @white, @white, @primary_colour_light);
 
+	li .eventCountWrap {
+		position: absolute;
+		top: 0;
+		right: 40px;
+		bottom: 0;
+		height: auto;
+		width: 35px;
+	}
+	li .eventCount.right {
+		color: @feature_colour;//@local_white;////#fcfcfc;
+		position: absolute;
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+		line-height: 40px;
+		font-size: 15px;
+		display: block;
+		width: 35px;
+		height: 40px;
+		text-align: center;
+		
+	}
+	
 
 }
 
