--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,9 +1,11 @@
 /* Main.less */
+@import 'lesshat';
 @import 'normalize';
 @import 'mixins';
 @import 'helpers/button-click-animation';
 @import 'helpers/cheveron-click-animation';
 @import 'helpers/list-item-click-animation';
+@import 'page-layout';
 @import 'columns';
 @import 'fonts';
 @import 'colours';
@@ -18,10 +20,13 @@
 @import 'time';
 @import 'bet';
 @import 'betslip';
+@import 'notify';
+@import 'modal';
+@import 'ticket';
 
 * {
 	box-sizing:border-box;
-	//font-family: BLap;
+	-webkit-font-smoothing: antialiased;
 }
 
 [class^="introjs"] {
@@ -86,6 +91,7 @@ h6 { font-size: .9em; }
 	padding: 10px;
 	width: 100%;
 	//border: solid 1px gray;
+	min-height: 240px;
 	border-radius: 5px;
 	margin: 5px;
 	display: inline-block;
@@ -103,12 +109,32 @@ h6 { font-size: .9em; }
 	border-radius: 5px;
 	box-sizing: border-box;
 }
+
+.module .pageLayoutExample {
+	position:relative;
+	width: 100%;
+	height: 250px;
+
+}
+
 .note:before { content:"Note: "}
 .note {
 	margin: 10px;
 	font-style: italic;
 	font-size: 0.8em;
 }
+
+.notifyListExampleWrap {position: relative; right: 10px; top: 10px; height: 120px; overflow: hidden;}
+.notifyListExampleWrap .notifyList {
+	position: relative;
+	&:after {
+		content: ' ';
+		display: table-cell;
+		clear: both;
+	}
+}
+
+
 
 .clearspace {
 	margin: 10px 0;
